# thrender

./: CMakeLists.txt  README.md  main.cpp  perf_timer.hpp  test_simd.cpp  utils.hpp
examples/: CMakeLists.txt
examples/lighting/: main.cpp
examples/split_buffers/: main.cpp
thrender/: CMakeLists.txt  camera.hpp  fragment_processor.hpp  framebuffer.hpp  framebuffer_array.hpp  gbuffer.hpp  math.hpp  mesh.cpp  mesh.hpp  pipeline.hpp  primitive_processor.hpp  primitives_processor.hpp  raster.hpp  render_context.hpp  render_state.hpp  renderable.hpp  shaders.hpp  thrender.hpp  triangle.hpp  types.hpp  utils.hpp  vertex_array.hpp  vertex_processor.hpp  viewport.hpp
thrender/exp/: gui.cpp  gui.hpp
thrender/utils/: frame_rate_keeper.hpp  io.hpp  mesh.hpp  profiler.hpp  to_string.hpp  utils.cpp
